force-app/main/default/objects/Yearly_Schemes__c/Yearly_Schemes__c.object-meta.xml
<CustomObject>
    <label>Yearly Schemes</label>
    <nameField>
        <displayFormat>YS-{00000}</displayFormat>
        <label>Yearly Scheme Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yearly Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>