force-app/main/default/objects/Yearly_Schemes__c/fields/Budget_Cap__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cap__c</fullName>
    <label>Budget Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>