force-app/main/default/objects/Yearly_Schemes__c/fields/Commitee_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Commitee_Deadline_Date__c</fullName>
    <label>Commitee Deadline Date</label>
    <type>Date</type>
</CustomField>