force-app/main/default/objects/Yearly_Schemes__c/fields/Committee_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Committee_Deadline_Date__c</fullName>
    <label>Committee Deadline Date</label>
    <type>Date</type>
</CustomField>