force-app/main/default/objects/Yearly_Schemes__c/fields/Days_Remaining_To_Close_Prelims__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining_To_Close_Prelims__c</fullName>
    <formula>Scheme_End_Date__c -  DATETIMEVALUE( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prelims Stage End Date - Today</inlineHelpText>
    <label>Days Remaining To Close Prelims</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>