force-app/main/default/objects/Yearly_Schemes__c/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <label>Deactivation Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>