force-app/main/default/objects/Yearly_Schemes__c/fields/Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Experience_Required__c</fullName>
    <label>Minimum Experience Required (In Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>