force-app/main/default/objects/Yearly_Schemes__c/fields/Experience_Required_To__c.field-meta.xml
<CustomField>
    <fullName>Experience_Required_To__c</fullName>
    <label>Maximum Experience Required (In Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>