force-app/main/default/objects/Yearly_Schemes__c/fields/FA_for_Year1__c.field-meta.xml
<CustomField>
    <fullName>FA_for_Year1__c</fullName>
    <label>FA for Year1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>