force-app/main/default/objects/Yearly_Schemes__c/fields/FA_for_Year2_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>FA_for_Year2_with_Tax__c</fullName>
    <formula>BLANKVALUE(FA_for_Year2__c, 0) * (1 + BLANKVALUE(FA_Percent__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA for Year2 with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>