force-app/main/default/objects/Yearly_Schemes__c/fields/FA_Percent__c.field-meta.xml
<CustomField>
    <fullName>FA_Percent__c</fullName>
    <label>FA Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>