force-app/main/default/objects/Yearly_Schemes__c/fields/Full_Grants_Responses_Required__c.field-meta.xml
<CustomField>
    <fullName>Full_Grants_Responses_Required__c</fullName>
    <description>Number of submitted Grants Team responses needed to decide Full eligibility for a proposal of this scheme. Blank uses 2.</description>
    <inlineHelpText>Submitted Grants Team responses needed to decide Full eligibility. Leave blank to use the default of 2.</inlineHelpText>
    <label>Full Grants Responses Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>