force-app/main/default/objects/Yearly_Schemes__c/fields/Full_Reviewers_Required__c.field-meta.xml
<CustomField>
    <fullName>Full_Reviewers_Required__c</fullName>
    <description>Number of reviewers expected for a Full-stage proposal of this scheme. Blank uses 3.</description>
    <inlineHelpText>Reviewers expected for a Full proposal. Leave blank to use the default of 3.</inlineHelpText>
    <label>Full Reviewers Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>