force-app/main/default/objects/Yearly_Schemes__c/fields/IA_Salary_Year5__c.field-meta.xml
<CustomField>
    <fullName>IA_Salary_Year5__c</fullName>
    <label>IA Salary Year5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>