force-app/main/default/objects/Yearly_Schemes__c/fields/Is_Committee_Can_See_Peer_Review__c.field-meta.xml
<CustomField>
    <fullName>Is_Committee_Can_See_Peer_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Committee Can See Peer Review</label>
    <type>Checkbox</type>
</CustomField>