force-app/main/default/objects/Yearly_Schemes__c/fields/Peer_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Peer_Deadline_Date__c</fullName>
    <label>Reviewer Peer Deadline Date</label>
    <type>Date</type>
</CustomField>