force-app/main/default/objects/Yearly_Schemes__c/fields/Prelim_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Deadline_Date__c</fullName>
    <label>Reviewer Prelim Deadline Date</label>
    <type>Date</type>
</CustomField>