force-app/main/default/objects/Yearly_Schemes__c/fields/Prelim_Reviewers_Required__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Reviewers_Required__c</fullName>
    <description>Number of reviewers expected for a Prelim-stage proposal of this scheme. Blank uses 2.</description>
    <inlineHelpText>Reviewers expected for a Prelim proposal. Leave blank to use the default of 2.</inlineHelpText>
    <label>Prelim Reviewers Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>