force-app/main/default/objects/Yearly_Schemes__c/fields/Required_Degree__c.field-meta.xml
<CustomField>
    <fullName>Required_Degree__c</fullName>
    <label>Required Degree</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MPH</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>