force-app/main/default/objects/Yearly_Schemes__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <label>Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>