force-app/main/default/objects/Yearly_Schemes__c/fields/Round_Robin_Pointer__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Pointer__c</fullName>
    <description>Tracks next index to assign in the rotation ring</description>
    <inlineHelpText>Tracks next index to assign in the rotation ring</inlineHelpText>
    <label>Round Robin Pointer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>