force-app/main/default/objects/Yearly_Schemes__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <formula>Scheme_Items__r.Scheme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme</label>
    <type>Text</type>
</CustomField>