force-app/main/default/objects/Yearly_Schemes__c/fields/Scheme_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheme_End_Date__c</fullName>
    <description>Application End Date</description>
    <inlineHelpText>Application End Date</inlineHelpText>
    <label>Scheme End Date</label>
    <type>DateTime</type>
</CustomField>