force-app/main/default/objects/Yearly_Schemes__c/fields/Scheme_Items__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Schemes</label>
    <referenceTo>Scheme_Items__c</referenceTo>
    <relationshipLabel>Yearly Schemes</relationshipLabel>
    <relationshipName>Yearly_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>