force-app/main/default/objects/Yearly_Schemes__c/fields/Scheme_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Start_Date__c</fullName>
    <description>Application Start Date</description>
    <inlineHelpText>Application Start Date</inlineHelpText>
    <label>Scheme Start Date</label>
    <type>DateTime</type>
</CustomField>