force-app/main/default/objects/Yearly_Schemes__c/fields/Scheme_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Visibility__c</fullName>
    <label>Scheme Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
                <default>true</default>
                <label>Restricted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>