force-app/main/default/objects/Yearly_Schemes__c/fields/Second_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Stage_End_Date__c</fullName>
    <label>Second Stage End Date</label>
    <type>DateTime</type>
</CustomField>