force-app/main/default/objects/Yearly_Schemes__c/fields/Second_Stage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Stage_Start_Date__c</fullName>
    <label>Second Stage Start Date</label>
    <type>DateTime</type>
</CustomField>