force-app/main/default/objects/Yearly_Schemes__c/fields/Team_Size_Limits__c.field-meta.xml
<CustomField>
    <fullName>Team_Size_Limits__c</fullName>
    <label>Team Size Limits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>