force-app/main/default/objects/Yearly_Schemes__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <description>This controls the pair size</description>
    <inlineHelpText>This controls the pair size</inlineHelpText>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>