force-app/main/default/objects/Yearly_Schemes__c/fields/Total_FA_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_FA_cost__c</fullName>
    <label>Total FA cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>