force-app/main/default/objects/Yearly_Schemes__c/fields/Total_FA_cost_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_FA_cost_with_Tax__c</fullName>
    <formula>BLANKVALUE(Total_FA_cost__c, 0) * (1 + BLANKVALUE(FA_Percent__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total FA cost with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>