force-app/main/default/objects/Yearly_Schemes__c/fields/Total_IA_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_IA_Salary__c</fullName>
    <label>Total IA Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>