force-app/main/default/objects/Yearly_Schemes__c/validationRules/Public_Scheme_Must_Be_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Public_Scheme_Must_Be_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Scheme_Visibility__c, &quot;Public&quot;),
    Is_Active__c = FALSE
)</errorConditionFormula>
    <errorMessage>A Yearly Scheme cannot be inactive if its visibility is set to Public. Please check the &apos;Is Active&apos; box or change the &apos;Scheme Visibility&apos;</errorMessage>
</ValidationRule>