force-app/main/default/objects/Yearly_Schemes__c/validationRules/Require_Dates_By_Application_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Dates_By_Application_Stage</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Scheme_Start_Date__c)),
  NOT(ISBLANK(Scheme_End_Date__c)),
  Scheme_End_Date__c &lt; Scheme_Start_Date__c
)</errorConditionFormula>
    <errorMessage>Scheme End Date Cannot be past of Scheme Start date</errorMessage>
</ValidationRule>