force-app/main/default/objects/Yearly_Schemes__c/validationRules/Scheme_Visibility_cannot_be_Public.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheme_Visibility_cannot_be_Public</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Scheme_Visibility__c),
    ISPICKVAL(Scheme_Visibility__c, &quot;Public&quot;),
    NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;))
)</errorConditionFormula>
    <errorDisplayField>Scheme_Visibility__c</errorDisplayField>
    <errorMessage>Scheme Visibility cannot be set to Public until the Approval Status is Approved.</errorMessage>
</ValidationRule>