force-app/main/default/objects/Yearly_Schemes__c/validationRules/Second_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_Stage_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Second_Stage_Start_Date__c)),
    NOT(ISBLANK(Second_Stage_End_Date__c)),
    Second_Stage_End_Date__c &lt; Second_Stage_Start_Date__c
)</errorConditionFormula>
    <errorMessage>Second Stage End Date Cannot be past of Second Stage Start date</errorMessage>
</ValidationRule>