force-app/main/default/objects/Yearly_Schemes__c/validationRules/Stage_2_Start_Greater_Than_First_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_2_Start_Greater_Than_First_End</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Second_Stage_Start_Date__c)),
    NOT(ISBLANK(Scheme_End_Date__c)),
    Second_Stage_Start_Date__c &lt; Scheme_End_Date__c
)</errorConditionFormula>
    <errorMessage>Second Stage Start Date Cannot be past of First Scheme End Date</errorMessage>
</ValidationRule>