force-app/main/default/objects/Yearly_Schemes__c/validationRules/Start_Date_Cannot_be_if_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Cannot_be_if_past</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  OR(ISNEW(), ISCHANGED(Scheme_Start_Date__c)),
  Scheme_Start_Date__c &lt; NOW()
)</errorConditionFormula>
    <errorMessage>Start Date cannot be in the past.</errorMessage>
</ValidationRule>