force-app/main/default/objects/Yearly_Schemes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Year__c</columns>
    <columns>Scheme_Items__c</columns>
    <columns>Application_Stages__c</columns>
    <columns>Scheme_Start_Date__c</columns>
    <columns>Scheme_End_Date__c</columns>
    <columns>Second_Stage_Start_Date__c</columns>
    <columns>Second_Stage_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>